--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@symfony/stimulus-bridge": "^4.0.1",
-    "@symfony/ux-live-component": "^2.31.0"
+    "@symfony/ux-live-component": "^2.31.0",
+    "toastr": "^2.1.4"
   }
 }
